client/src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Montserrat&display=swap');

body{
  padding: 0;
  margin: 0;
  background-color: #EAE0D5;
}

#appContainer {
  font-family: 'Montserrat', sans-serif;
  background-color: white;
  overflow: auto;
  min-height: 87.4vh;
}

.header {
  background-color: #0A0908;
  color: #EAE0D5;
  max-height: 100px;
}

.footer {
  background-color: #0A0908;
  color: #EAE0D5;
  max-height: 50px;
}

.header a, .footer a {
  color: inherit;
  text-decoration: inherit;
}

.logo {
  padding: 0;
  margin: 0;
}

.nav {
  text-align: right;
  color: #EAE0D5;
}

